2003-01-09 	fabian
    * help docs updated. Removed unnecessary links and pics
    
2003-01-08	fabian
    * Added new option in address book entries that allow
      user to set "close session automatically" individually
      
2003-01-08	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Save menu item in contextual menu is always validated. 
      Saves selection if there is one, save everything if not.
      
    * Added "Close" menu item to contextual menu to close 
      current session.
      
    * When copying text, trimming white spaces and new lines.
      
    
2003-01-07	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Adjusted some visual sizing glitches when going from 
      no tabs to tabs and vice versa.
      
    * windowWillResize: toSize does the default OS thing.
    

2003-01-07	fabian
    * fixed a bug in eraseInLine()
    * hide the tab when there's only one session
    * new VT100Screen code, should be faster
    * Japanese localization files updated
    
2003-01-06	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Remove fatal recursive loop by not calling 
      [self setWindowSize] from PseudoTerminal: -windowDidResize.
      The window sizing part needs some real attention. 
      Temporarily re-activating new resizing code with 
      windowWillresize: toSize: method.
       

2003-01-06	fabian
    * Fixed the display problem related to "bold"
    * Updated Chinese nib files for anti-aliasing and print&save
    * Chinese strings files updated for new contextual menu item
    * Set the version number to 0.6.1
    * Incorporated the patch sent by kuri@makino.ecei.tohoku.ac.jp
      
    
2003-01-05	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added Address Book into contextual menu. Entries 
      can be executed in a new tab or in a new window. 
      To execute in a new window, hold down the command 
      key while accessing the contextual menu.
    
    * Refactored the contextual menu code, so that the 